# ark-rs

./: .env.sample  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  e2e-core.yml  e2e-tests.yml
ark-bdk-wallet/: Cargo.toml
ark-bdk-wallet/src/: lib.rs
ark-client/: Cargo.toml
ark-client/src/: lib.rs  round.rs  send_vtxo.rs  unilateral_exit.rs  utils.rs  wallet.rs
ark-core/: Cargo.toml  test_vectors.json
ark-core/src/: ark_address.rs  arknote.rs  boarding_output.rs  history.rs  lib.rs  proof_of_funds.rs  redeem.rs  round.rs  server.rs  tx_graph.rs  unilateral_exit.rs  vtxo.rs
ark-core/src/lightning/: README.md  errors.rs  lightning_swaps.rs  mod.rs  traits.rs  types.rs  utils.rs
ark-dlc-sample/: Cargo.toml
ark-dlc-sample/src/: main.rs
ark-grpc/: Cargo.toml  build.rs
ark-grpc/src/: client.rs  error.rs  types.rs
ark-lightning/: Cargo.toml  README.md
ark-lightning/examples/: basic_usage.rs  bip353_example.rs
ark-lightning/src/: bip353.rs  boltz.rs  errors.rs  lib.rs  lightning_swaps.rs  traits.rs  types.rs  utils.rs
ark-rest/: Cargo.toml
ark-rest/src/apis/: mod.rs
ark-rest/src/models/: v1_get_info_response.rs
ark-rest/tests/: wasm.rs
ark-rs/: Cargo.toml
ark-rs/src/: lib.rs
ark-rust-secp256k1/secp256k1-sys/src/: lib.rs  recovery.rs
ark-rust-secp256k1/src/: context.rs  ecdh.rs  ellswift.rs  key.rs  lib.rs  macros.rs  musig.rs  scalar.rs  schnorr.rs  secret.rs
ark-rust-secp256k1/src/ecdsa/: mod.rs  recovery.rs  serialized_signature.rs
ark-sample/: Cargo.toml  justfile
ark-sample/src/: main.rs
e2e-tests/: Cargo.toml
e2e-tests/tests/: common.rs  e2e_arknote.rs  e2e_concurrent_boarding.rs  e2e_send_onchain_boarding_output.rs  e2e_send_onchain_vtxo_and_boarding_output.rs  e2e_sub_dust.rs  e2e_two_party.rs
examples/: bip353_resolver_example.rs
