[package]
name = "ark-lightning"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Lightning Network integration for Ark protocol through submarine swaps"

[dependencies]
# Core dependencies
ark-core = { version = "0.7.0", path = "../ark-core" }
bitcoin = { version = "0.32.4", features = ["base64", "rand", "serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"

# Lightning dependencies
lightning = { version = "0.0.125", features = ["std", "_test_utils"] }
lightning-invoice = "0.33.2"

# Boltz swap provider (optional)
# boltz-client = { version = "0.1.2", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Async dependencies
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["time", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["bip353"]
boltz = ["reqwest"]
bip353 = ["reqwest"]
